# uti

./: .gitignore  CMakeLists.txt  README.md  cconfig.debug  cconfig.release  cconfig.test  index.html  main.cpp
.ci/: ubuntu.Dockerfile
.ci/docker/: rockylinux.Dockerfile
.github/workflows/: bench_multiplatform.yml  bench_ubuntu_clang.yml  test_multiplatform.yml  test_ubuntu.yml
bench/: CMakeLists.txt  gbench_uti.cpp  gbench_uti.hpp
bench/uti/: CMakeLists.txt  uti.bench.cxx  uti.bench.hxx
dev/bench/: data.js  index.html
include/: CMakeLists.txt  string_switch.hpp  string_view.hpp  traits.hpp  type_traits.hpp  uti  uti.core.hxx  uti.sys.hxx
include/algo/: copy.hpp  distance.hpp  mem.hpp  swap.hpp
include/allocator/: default.hpp  meta.hpp  static_bump.hpp
include/container/: allocator.hpp  array.hpp  base.hpp  buffer.hpp  container_base.hpp  iterator.hpp  meta.hpp  prefix_array.hpp  segment_tree.hpp  tuple.hpp  vector.hpp  vectorlike.hpp  view.hpp
include/iterator/: base.hpp  meta.hpp  reverse_iterator.hpp
include/mem/: allocator.hpp  buffer.hpp  container_base.hpp  view.hpp
include/meta/: common_ref.hpp  common_type.hpp  concepts.hpp  invoke.hpp  iterator.hpp  list.hpp  meta.hpp  ref_wrap.hpp  sequence.hpp  traits.hpp  uti_traits.hpp
include/string/: string.hpp  string_switch.hpp  string_view.hpp
include/traits/: int_sequence.hpp  ref_wrap.hpp  sequence.hpp  traits.hpp
include/type/: common_type.hpp  iterator.hpp  ref_wrap.hpp  sequence.hpp  traits.hpp
include/uti/core/algo/: advance.hxx  copy.hxx  distance.hxx  mem.hxx  swap.hxx
include/uti/core/allocator/: default.hxx  freelist_resource.hxx  meta.hxx  new.hxx  resource.hxx
include/uti/core/container/: array.hxx  base.hxx  buffer.hxx  constexpr_twostep.hxx  list.hxx  memory_footprint.hxx  meta.hxx  optional.hxx  prefix_array.hxx  segment_tree.hxx  static_vector.hxx  tagged_union.hxx  tuple.hxx  variant.hxx  variant_base.hxx  variant_vector.hxx  vector.hxx  view.hxx
include/uti/core/error/: result.hxx
include/uti/core/iterator/: base.hxx  meta.hxx  reverse_iterator.hxx
include/uti/core/meta/: algo.hxx  concepts.hxx  join.hxx  list.hxx  random.hxx
include/uti/core/string/: string.hxx  string_switch.hxx  string_view.hxx
include/uti/core/type/: common_ref.hxx  common_type.hxx  invoke.hxx  ref_wrap.hxx  sequence.hxx  traits.hxx
include/uti/core/util/: assert.hxx  cm_control.hxx  config.hxx  copy_counter.hxx
include/uti/sys/: test.hxx
include/util/: assert.hpp  config.hpp  copy_counter.hpp
source/: CMakeLists.txt  uti.hxx
source/uti/: CMakeLists.txt  uti.cps  uti.cxx  uti.hxx  uti.pc
source/uti/algo/: advance.hxx  copy.hxx  distance.hxx  mem.hxx  swap.hxx
source/uti/allocator/: default.hxx  freelist_resource.hxx  meta.hxx  new.hxx  resource.hxx
source/uti/container/: array.hxx  base.hxx  buffer.hxx  list.hxx  meta.hxx  optional.hxx  prefix_array.hxx  segment_tree.hxx  static_vector.hxx  tagged_union.hxx  tuple.hxx  variant.hxx  variant_base.hxx  variant_vector.hxx  vector.hxx  view.hxx
source/uti/iterator/: base.hxx  meta.hxx  reverse_iterator.hxx
source/uti/meta/: algo.hxx  concepts.hxx  join.hxx  list.hxx  random.hxx
source/uti/string/: string.hxx  string_switch.hxx  string_view.hxx
source/uti/sys/: CMakeLists.txt  test.cxx
source/uti/type/: common_ref.hxx  common_type.hxx  invoke.hxx  ref_wrap.hxx  sequence.hxx  traits.hxx
source/uti/util/: assert.hxx  cm_control.hxx  config.hxx  copy_counter.hxx
test/: CMakeLists.txt  gtest_iterator.cpp  gtest_iterator.hpp  gtest_prefix.cpp  gtest_prefix.hpp  gtest_segment.cpp  gtest_segment.hpp  gtest_string.cpp  gtest_string.hpp  gtest_traits.cpp  gtest_traits.hpp  gtest_uti.cpp  gtest_uti.hpp  gtest_variant_vector.cpp  gtest_variant_vector.hpp  gtest_vector.cpp  gtest_vector.hpp  main.cpp  traits.hpp
test/uti/: CMakeLists.txt  algo.test.cxx  allocator.test.cxx  iterator.test.cxx  list.test.hxx  meta.test.cxx  prefix_array.test.cxx  segment_tree.test.cxx  string.test.cxx  string_switch.test.cxx  string_view.test.cxx  tuple.test.cxx  type.test.cxx  uti.manual.cxx  uti.test.hxx  variant.test.cxx  variant_vector.test.cxx  vector.test.cxx
test/uti/core/: CMakeLists.txt  algo.test.cxx  allocator.test.cxx  iterator.test.cxx  list.test.cxx  meta.test.cxx  prefix_array.test.cxx  segment_tree.test.cxx  string.test.cxx  string_switch.test.cxx  string_view.test.cxx  tuple.test.cxx  type.test.cxx  uti.core.test.hxx  variant.test.cxx  variant_vector.test.cxx  vector.test.cxx
test/uti/sys/: CMakeLists.txt  sys.test.cxx
uti/algo/: advance.hpp  mem.hpp
uti/allocator/: freelist_resource.hpp  meta.hpp  resource.hpp
uti/container/: buffer.hpp  list.hpp  prefix_array.hpp  variant_vector.hpp  vector.hpp
uti/iterator/: base.hpp
uti/type/: traits.hpp
uti/util/: config.hpp
